--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>AI-Theoretic</h1>
+    <h1>AI-Theoretical</h1>
     <h2 style="text-align:center;">Human–AI Co-Authored Theoretical Papers</h2>
     
     <p><strong>Manifesto (draft)</strong>: This platform collects and publishes scholarly papers openly co-authored by humans and frontier AI models. Every contribution declares transparently the role of the AI. Papers undergo review by independent AI models (different from the co-author). The goal is to experiment with new forms of knowledge production and reflect on authorship, creativity, and epistemology in the age of AI.</p>
