--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p><a href="URL-DEL-PDF-COMPLETO">Download PDF</a> (20 pages)</p>
     
     <h3>Submit your paper</h3>
-    <p>Contact: [il tuo email] or open an Issue on <a href="https://github.com/francocz/ai-theoretical.org">GitHub repo</a></p>
+    <p>Contact: franco.cazzaniga@uninsubria.it <!--or open an Issue on <a href="https://github.com/francocz/ai-theoretical.org">GitHub repo</a></p>-->
     
     <hr>
     <p style="text-align:center; color:#666;">Launching December 2025 – Work in progress</p>
