--- a/index.html
+++ b/index.html
@@ -128,18 +128,28 @@
         <div class="manifesto-label">Manifesto [v1.0]</div>
         <div>
             <div class="manifesto-quote">
-                "This platform collects and publishes scholarly papers openly co-authored by humans and frontier AI models. We experiment with new forms of knowledge production to reflect on authorship and epistemology in the age of synthetic intelligence."
-            </div>
-            <div class="participation-call">
-                Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
-            </div>
+    "This platform collects and publishes scholarly papers openly co-authored by humans and frontier AI models. We experiment with new forms of knowledge production to reflect on authorship and epistemology in the age of synthetic intelligence."
+</div>
+
+<div class="participation-call">
+    All texts are accompanied by explicit editorial principles and an AI-assisted editorial assessment.
+</div>
+
+<div class="participation-call">
+    <a href="editorial-principles.html">Editorial principles</a> ·
+    <a href="admission-criteria.html">Admission criteria</a>
+</div>
+
+<div class="participation-call">
+    Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
+</div>
+
         </div>
     </div>
 
     <div id="repository"></div>
 
     <footer>
-        <a href="README.md" target="_blank" class="btn-readme">Open README.md</a>
     </footer>
 </div>
 
