--- a/index.html
+++ b/index.html
@@ -132,15 +132,9 @@
 </div>
 
 <div class="participation-call">
-    All texts are accompanied by explicit editorial principles and an AI-assisted editorial assessment.
-</div>
-
-<div class="participation-call">
+    All texts are accompanied by explicit editorial principles and an AI-assisted editorial assessment.<br>
     <a href="editorial-principles.html">Editorial principles</a> ·
-    <a href="admission-criteria.html">Admission criteria</a>
-</div>
-
-<div class="participation-call">
+    <a href="admission-criteria.html">Admission criteria</a><br>
     Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
 </div>
 
