--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
 </div>
 
 <div class="participation-call">
-    All texts are accompanied by explicit editorial principles and an AI-assisted editorial assessment.<br>
-    <a href="editorial-principles.html">Editorial principles</a> ·
-    <a href="admission-criteria.html">Admission criteria</a><br>
+    <a href="editorial-principles.html">Editorial framework</a><br>
+    Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
+</div>
+
     Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
 </div>
 
