--- a/index.html
+++ b/index.html
@@ -125,20 +125,23 @@
     </header>
 
     <div class="manifesto-grid">
-        <div class="manifesto-label">Manifesto [v1.0]</div>
+        <div class="manifesto-label">
+            Manifesto [v1.0]<br>
+            <a href="editorial-principles.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
+                Editorial framework
+            </a>
+        </div>
         <div>
             <div class="manifesto-quote">
                 "This platform collects and publishes scholarly papers openly co-authored by humans and frontier AI models. We experiment with new forms of knowledge production to reflect on authorship and epistemology in the age of synthetic intelligence."
-            </div>
-            <div class="participation-call">
-                <a href="editorial-principles.html">Editorial framework</a><br>
-                Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
             </div>
         </div>
     </div>
     <hr>
     <div id="repository"></div>
+    
     <footer>
+        Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
     </footer>
 </div>
 
