--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -55,6 +55,9 @@
 <div class="container">
 
 <header>
+    <a href="index.html" style="font-size:0.75rem; color:var(--text-muted); text-decoration:none;">
+        ← Back
+    </a>
     <h1>Editorial Framework</h1>
     <hr>
 </header>
