--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <a href="editorial-principles.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
                 Editorial framework
             </a>
+            <a href="ai-prompt.js">AI editorial prompt</a>
         </div>
         <div>
             <div class="manifesto-quote">
