--- a/index.html
+++ b/index.html
@@ -126,11 +126,15 @@
 
     <div class="manifesto-grid">
         <div class="manifesto-label">
-            Manifesto [v1.0]<br>
+            <a href="manifesto.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
+                Manifesto
+            </a><br>
             <a href="editorial-principles.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
                 Editorial framework
             </a><br>
-            <a href="ai-editorial-prompt.html">AI editor prompt</a>
+            <a href="ai-editorial-prompt.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
+                AI editorial prompt
+            </a>
         </div>
         <div>
             <div class="manifesto-quote">
