--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 
     <div class="manifesto-grid">
         <div class="manifesto-label">
-            <a href="manifesto.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
+            <a href="manifesto.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-main); text-decoration:none;">
                 Manifesto
             </a><br>
-            <a href="editorial-principles.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
+            <a href="editorial-principles.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-main); text-decoration:none;">
                 Editorial framework
             </a><br>
-            <a href="ai-editorial-prompt.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-blue); text-decoration:none;">
+            <a href="ai-editorial-prompt.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--accent-main); text-decoration:none;">
                 AI editorial prompt
             </a>
         </div>
