--- a/manifesto.html
+++ b/manifesto.html
@@ -1,1 +1,131 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Manifesto — AI-Theoretical</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+    <style>
+        :root {
+            --accent-blue: #2563eb;
+            --text-main: #1a1a1a;
+            --text-muted: #666;
+            --border: #e5e5e0;
+        }
+
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: 'Inter', sans-serif;
+            background: #fff;
+            color: var(--text-main);
+            line-height: 1.6;
+            padding: 0 40px;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        header {
+            padding: 60px 0 30px;
+        }
+
+        .nav {
+            font-size: 0.75rem;
+            color: var(--text-muted);
+            text-decoration: none;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.4rem;
+            font-weight: 700;
+            letter-spacing: -1px;
+            margin-bottom: 20px;
+        }
+
+        hr {
+            border: 0;
+            border-top: 1px solid var(--border);
+            margin-bottom: 40px;
+        }
+
+        .section {
+            max-width: 720px;
+            font-size: 0.95rem;
+            margin-bottom: 30px;
+        }
+
+        footer {
+            margin: 80px 0 60px;
+            padding-top: 40px;
+            border-top: 1px solid var(--border);
+            font-size: 0.85rem;
+            color: var(--text-muted);
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+<div class="container">
+
+<header>
+    <a href="index.html" class="nav">← Back</a>
+    <h1>Manifesto</h1>
+    <hr>
+</header>
+
+<div class="section">
+    <p>
+        AI-Theoretical is a space for high-level theoretical writing developed through explicit collaboration
+        between human authors and AI systems.
+    </p>
+</div>
+
+<div class="section">
+    <p>
+        For us, collaboration refers to the joint participation of human and artificial agents in the
+        generative phase of writing. AI systems are not confined to stylistic refinement or bibliographic
+        assistance, but actively contribute by suggesting unconventional connections, alternative
+        conceptual routes, and exploratory directions that may lie outside the author’s initial framing.
+    </p>
+</div>
+
+<div class="section">
+    <p>
+        The text takes shape through an ongoing interaction. The human author retains full responsibility
+        for the overall architecture, the substantive claims, and the interpretive decisions that give
+        coherence to the work, while the AI operates as a generative and supporting interlocutor throughout
+        the process.
+    </p>
+</div>
+
+<div class="section">
+    <p>
+        In addition, the AI provides immediately accessible background knowledge and, within practical
+        limits, support in assessing the correctness of specific claims. This form of assistance is
+        effective insofar as the AI is used to navigate shared bodies of knowledge through appropriate
+        disciplinary methods, rather than being treated as an epistemic authority.
+    </p>
+</div>
+
+<div class="section">
+    <p>
+        What matters here is the capacity of a text to sustain conceptual scrutiny and to generate
+        constraints that remain meaningful beyond a single theoretical idiom.
+    </p>
+</div>
+
+<footer>
+    AI-Theoretical · Manifesto
+</footer>
+
+</div>
+</body>
+</html>
 
