--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             </a><br>
             <a href="ai-editorial-prompt.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--text-main); text-decoration:none;">
                 AI editorial prompt
+            </a><br>
+            <a href="invite.html" style="font-size:0.65rem; font-weight:600; text-transform:uppercase; letter-spacing:1px; color:var(--text-main); text-decoration:none;">
+                Invitation to participate
             </a>
         </div>
         <div>
