--- a/invite.html
+++ b/invite.html
@@ -97,8 +97,9 @@
 
 <div class="section">
     <p>
-        Texts that fit the scope of the platform may subsequently undergo an AI-assisted editorial
-        assessment, which is published alongside the paper.
+        Texts that fit the scope of the platform may subsequently undergo an
+        AI-performed editorial assessment, carried out in accordance with the
+        provisions outlined in the AI editorial prompt and published alongside the paper.
     </p>
 </div>
 
