--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Theoretical</title>
+    <title>AI-Theoretical | Human-AI Co-Authored Theoretical Papers</title>
+    <meta name="description" content="A platform for scholarly works openly co-authored by humans and frontier AI models. Explore theoretical papers in philosophy, science, and epistemology.">
+    <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, epistemology, philosophy of AI, Franco Cazzaniga">
+
+    <meta property="og:title" content="AI-Theoretical | Human-AI Research">
+    <meta property="og:description" content="Publishing high-quality theoretical papers co-authored by humans and AI.">
+    <meta property="og:url" content="https://ai-theoretical.org">
+    <meta property="og:type" content="website">
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         :root {
