--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Theoretical | Human-AI Co-Authored Theoretical Papers</title>
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
     <meta name="description" content="A platform for scholarly works openly co-authored by humans and frontier AI models. Explore theoretical papers in philosophy, science, and epistemology.">
     <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, epistemology, philosophy of AI, Franco Cazzaniga">
 
