--- a/manifesto.html
+++ b/manifesto.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manifesto — AI-Theoretical</title>
+    <meta name="description" content="Our vision for human-AI symbiosis in theoretical research. Exploring transparent authorship and AI as an active cognitive partner in epistemology and science.">
+    <meta property="og:title" content="Manifesto — AI-Theoretical">
+    <meta property="og:description" content="A new framework for human-AI co-authorship in theoretical disciplines.">
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
