--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editorial Framework — AI-Theoretical</title>
+    <meta name="description" content="The protocol for AI-assisted editorial assessment. Learn about our criteria for theoretical adequacy, coherence, and scholarly grounding.">
+    <meta property="og:title" content="Editorial Framework — AI-Theoretical">
+    <meta property="og:description" content="How we evaluate human-AI co-authored papers.">
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
         :root {
