--- a/invite.html
+++ b/invite.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitation to Participate — AI-Theoretical</title>
+    <meta name="description" content="Join the AI-Theoretical project. We invite researchers interested in exploring human-AI co-authorship in philosophy, science, and mathematics.">
+    <meta property="og:title" content="Join AI-Theoretical">
+    <meta property="og:description" content="Call for contributions: human-AI symbiotic theoretical works.">
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
