--- a/ai-editorial-prompt.html
+++ b/ai-editorial-prompt.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Editorial Prompt — AI-Theoretical</title>
+    <meta name="description" content="Transparency in evaluation: read the exact system prompt used for the AI-assisted editorial assessment of our papers.">
+    <meta property="og:title" content="AI Editorial Prompt — Methodological Transparency">
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
