--- a/invite.html
+++ b/invite.html
@@ -120,10 +120,9 @@
     </p>
 </div>
 
-<footer>
-    AI-Theoretical · Invitation
-</footer>
-
+    <footer>
+        <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
+    </footer>
 </div>
 </body>
 </html>
