--- a/ai-editorial-prompt.html
+++ b/ai-editorial-prompt.html
@@ -123,7 +123,7 @@
 </div>
 
 <footer>
-    AI-Theoretical · Editorial protocol
+    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
 </footer>
 
 </div>
