--- a/submit.html
+++ b/submit.html
@@ -185,7 +185,7 @@
     </style>
 </head>
 <body>
-    <p class="back"><a href="index.html">← Back to AI-Theoretical</a></p>
+    <p class="back"><a href="index.html">←</a></p>
     
     <h1>Submit a Paper</h1>
     <p class="subtitle">Propose your work for publication on AI-Theoretical</p>
