--- a/submit.html
+++ b/submit.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit a Paper — AI-Theoretical</title>
+    <title>Submit a Paper — AI-Theoretical</title
+    <meta name="description" content="Our vision for human-AI symbiosis in theoretical research. Exploring transparent authorship and AI as an active cognitive partner in epistemology and science.">
+    <meta property="og:title" content="Manifesto — AI-Theoretical">
+    <meta property="og:description" content="A new framework for human-AI co-authorship in theoretical disciplines.">
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+
     <style>
         * {
             box-sizing: border-box;
@@ -185,7 +190,7 @@
     </style>
 </head>
 <body>
-    <p class="back"><a href="index.html">←</a></p>
+    <p class="back"><a href="index.html">← Back</a></p>
     
     <h1>Submit a Paper</h1>
     <p class="subtitle">Propose your work for publication on AI-Theoretical</p>
